--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,11 @@
 # Log file
 *.log
 
-# BlueJ files
+# IDE files
 *.ctxt
+.idea
+.project
+.settings
 
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
@@ -26,4 +29,6 @@ hs_err_pid*
 .DS_Store
 build/
 .gradle
-.idea
+
+RTM.md
+List of Test Cases.md
