--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,9 @@ repositories {
 dependencies {
     // Use JUnit test framework
     testImplementation 'junit:junit:4.12'
+    // Use mockito test framework
+    testImplementation 'org.mockito:mockito-inline:3.+'
+    testImplementation 'org.mockito:mockito-junit-jupiter:3.+'
 
 	// Deprecated.  Use testImplementation.
 //    testCompile 'junit:junit:4.12'
